--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" type="text/css" href="onsen-css/onsenui.css">
   <link rel="stylesheet" type="text/css" href="onsen-css/onsen-css-components.min.css">
   <script src="onsen-js/onsenui.min.js"></script>
+  <script src="js/JsBarcode.all.min.js"></script>
 
   <script>
     window.fn = {};
@@ -22,6 +23,35 @@
       content.load(page).then(menu.close.bind(menu));
 
     };
+
+    // Create database
+    var storage = window.localStorage;
+
+
+    // Barcode generator
+    window.fn.barcode = function(){
+
+      var userId = document.getElementById('id-number').value;
+
+
+
+      storage.setItem("userId", userId) // Pass a key name and its value to add or update that key.
+
+
+    };
+
+
+    window.fn.display = function(){
+
+      var userId = storage.getItem("userId");
+
+      JsBarcode("#barcode", userId, {
+        format: "codabar",
+        lineColor: "#000",
+      });
+
+    };
+
 
   </script>
 
@@ -44,8 +74,12 @@
               Online Resources
             </ons-list-item>
 
-            <ons-list-item>
+            <ons-list-item onclick="fn.load('library-id.html')" tappable>
               Library ID
+            </ons-list-item>
+
+            <ons-list-item onclick="fn.load('volunteering-opportunities.html')" tappable>
+              Volunteering
             </ons-list-item>
 
             <ons-list-item>
@@ -70,6 +104,24 @@
           </div>
           <div class="center">
             Salinas Library App
+          </div>
+          <div class="right">
+
+          </div>
+        </ons-toolbar>
+      </ons-page>
+    </template>
+
+    <template id="volunteering-opportunities.html">
+      <ons-page>
+        <ons-toolbar>
+          <div class="left">
+            <ons-toolbar-button onclick="fn.open()">
+              <ons-icon icon="md-menu"></ons-icon>
+            </ons-toolbar-button>
+          </div>
+          <div class="center">
+            Volunteering Opportunities
           </div>
           <div class="right">
 
@@ -180,9 +232,42 @@
           </div>
         </ons-card>
 
-        <ons-card>
-          <img src="images/lynda.jpg" style="width: 100%; height: 50%" />
-        </ons-card>
+      </ons-page>
+    </template>
+
+    <template id="library-id.html">
+      <ons-page>
+        <ons-toolbar>
+          <div class="left">
+            <ons-toolbar-button onclick="fn.open()">
+              <ons-icon icon="md-menu"></ons-icon>
+            </ons-toolbar-button>
+          </div>
+          <div class="center">
+            Online Resources
+          </div>
+          <div class="right">
+
+          </div>
+        </ons-toolbar>
+
+        <div style="text-align: center; margin-top: 30px;">
+          <p>
+            <ons-input id="id-number" modifier="underbar" placeholder="Your library id number" maxlength="14" float></ons-input>
+          </p>
+
+          <p style="margin-top: 30px;">
+            <ons-button onclick="fn.barcode()">Generate Library Card</ons-button>
+          </p>
+
+          <svg id="barcode"></svg>
+
+          <p style="margin-top: 30px;">
+            <ons-button onclick="fn.display()">Display ID</ons-button>
+          </p>
+
+        </div>
+
 
       </ons-page>
     </template>
