--- a/www/index.html
+++ b/www/index.html
@@ -280,7 +280,7 @@
       <ons-page>
         <script>
           // For scanning
-          window.fn.scan = function(){
+          function(){
             cordova.plugins.barcodeScanner.scan(
               function (result) {
                   alert("We got a barcode\n" +
