--- a/www/index.html
+++ b/www/index.html
@@ -263,7 +263,7 @@
         </ons-toolbar>
 
         <ons-card>
-          <a href="http://www.hoopladigital.com">
+          <a href="http://www.hoopladigital.com" target="iframe">
           <img src="images/hoopla-logo-blue.png" style="width: 100%" />
           </a>
           <div class="content">
@@ -272,7 +272,10 @@
             </div>
           </div>
         </ons-card>
+        <script>
+        window.open('https://google.com', '_self ', 'location=yes');
 
+        </script>
       </ons-page>
     </template>
 
