--- a/www/index.html
+++ b/www/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta http-equiv="Content-Security-Policy" content="default-src *; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data:">
   <link rel="stylesheet" type="text/css" href="onsen-css/onsenui.css">
   <link rel="stylesheet" type="text/css" href="onsen-css/onsen-css-components.min.css">
+  <script src="js/jquery-3.3.1.min.js"></script>
   <script src="onsen-js/onsenui.min.js"></script>
   <script src="js/JsBarcode.all.min.js"></script>
 
@@ -64,6 +66,18 @@
         }
       );
     };
+
+
+
+  </script>
+
+  <script>
+
+  var name = "codemzy";
+  var url = "http://anyorigin.com/go?url=" + encodeURIComponent("https://www.codewars.com/users/") + name + "&callback=?";
+  $.get(url, function(response) {
+    console.log(response);
+  });
 
   </script>
 
