inappbrowser alert test

--- a/www/index.html
+++ b/www/index.html
@@ -161,12 +161,12 @@
           //       }
           //   );
           // });
-          function loadStopCallBack() {
-
-              inAppBrowserRef.show();
-          }
-          addEventListener('loadstop', loadStopCallBack);
-
+          // function loadStopCallBack() {
+          //
+          //     inAppBrowserRef.show();
+          // }
+          // addEventListener('loadstop', loadStopCallBack);
+          //
 
 
           </script>
